crates/perl-lsp/tests/snapshots/pull_diagnostics_snap_tests__pl701_full_report_then_unchanged.snap
---
source: crates/perl-lsp/tests/pull_diagnostics_snap_tests.rs
expression: "serde_json::Value::Object(combined)"
---
first_full:
  items:
    - code: PL100
      data:
        category: StrictWarnings
        code: PL100
        fixable: true
        tags: []
      message: "Consider adding 'use strict;' for better error checking\nSuggestion: Add 'use strict;' at the top of the file"
      range:
        end:
          character: 0
          line: 0
        start:
          character: 0
          line: 0
      relatedInformation:
        - location:
            range:
              end:
                character: 0
                line: 0
              start:
                character: 0
                line: 0
            uri: "file:///test_full_then_unchanged.pl"
          message: "💡 Add 'use strict;' at the beginning of your script"
        - location:
            range:
              end:
                character: 0
                line: 0
              start:
                character: 0
                line: 0
            uri: "file:///test_full_then_unchanged.pl"
          message: "ℹ️ The 'use strict' pragma enforces good coding practices by requiring variable declarations, disabling barewords, and preventing symbolic references."
      severity: 3
      source: perl-lsp
    - code: PL101
      data:
        category: StrictWarnings
        code: PL101
        fixable: true
        tags: []
      message: "Consider adding 'use warnings;' for better error detection\nSuggestion: Add 'use warnings;' at the top of the file"
      range:
        end:
          character: 0
          line: 0
        start:
          character: 0
          line: 0
      relatedInformation:
        - location:
            range:
              end:
                character: 0
                line: 0
              start:
                character: 0
                line: 0
            uri: "file:///test_full_then_unchanged.pl"
          message: "💡 Add 'use warnings;' at the beginning of your script"
        - location:
            range:
              end:
                character: 0
                line: 0
              start:
                character: 0
                line: 0
            uri: "file:///test_full_then_unchanged.pl"
          message: "ℹ️ The 'use warnings' pragma enables helpful warning messages about questionable constructs, uninitialized values, and deprecated features."
      severity: 3
      source: perl-lsp
    - code: PL701
      data:
        category: Import
        code: PL701
        fixable: false
        tags: []
      message: "Module 'Missing::Module' not found. Searched @INC: /test/path1. Add to lib path or install the module.\nSuggestion: Install with: cpanm Missing::Module or add to .perl-lsp.toml: include_paths"
      range:
        end:
          character: 19
          line: 0
        start:
          character: 0
          line: 0
      severity: 2
      source: perl-lsp
    - code: PL700
      data:
        category: Import
        code: PL700
        fixable: false
        tags:
          - Unnecessary
      message: "Module 'Missing::Module' appears to be unused\nSuggestion: Remove 'use Missing::Module;' if it is not needed"
      range:
        end:
          character: 19
          line: 0
        start:
          character: 0
          line: 0
      relatedInformation:
        - location:
            range:
              end:
                character: 19
                line: 0
              start:
                character: 0
                line: 0
            uri: "file:///test_full_then_unchanged.pl"
          message: "If 'Missing::Module' is imported for side effects, you can ignore this hint"
      severity: 4
      source: perl-lsp
      tags:
        - 1
    - code: "TestingAndDebugging::RequireUseStrict"
      data:
        category: Other
        code: "TestingAndDebugging::RequireUseStrict"
        fixable: true
        tags: []
      message: Code does not use strict
      range:
        end:
          character: 0
          line: 0
        start:
          character: 0
          line: 0
      severity: 2
      source: perl-lsp
    - code: "TestingAndDebugging::RequireUseWarnings"
      data:
        category: Other
        code: "TestingAndDebugging::RequireUseWarnings"
        fixable: true
        tags: []
      message: Code does not use warnings
      range:
        end:
          character: 0
          line: 0
        start:
          character: 0
          line: 0
      severity: 2
      source: perl-lsp
  kind: full
  resultId: "<stable-result-id>"
second_unchanged:
  kind: unchanged
  resultId: "<stable-result-id>"
