crates/perl-lsp/tests/snapshots/pull_diagnostics_snap_tests__pl701_unchanged_report_caching.snap
---
source: crates/perl-lsp/tests/pull_diagnostics_snap_tests.rs
expression: snapshot_value
---
kind: unchanged
resultId: "<stable-result-id>"
